--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "@grapecity/gcpdfviewer"
+              ],
             "outputPath": "dist/rajesh",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -32,8 +35,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "10mb",
+                  "maximumError": "20mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "177b5df7-672a-4296-a194-994b89065186"
   }
 }
